--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Puzzle</title>
-	<link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div id="content">
+<html lang="uk">
+      <head>
+	      <meta charset="UTF-8">
+	      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	      <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	       <title>Puzzle</title>
+	        <link rel="stylesheet" href="style.css">
+      </head>
+      <body>
+        <div id="content">
         <div class = "fixed">
-            "Homework<br/> Денис Головко"
+            "Homework<br/> Р”РµРЅРёСЃ Р“РѕР»РѕРІРєРѕ"
         </div>
-        <h1>Ознайомлення з css-правилом "position"</h1>
-        <p>Це правило встановлює спосіб позиціювання елементу відносно вікна браузера чи інших об'єктів на веб-сторінці.Положення элементу задається атрибутами left, top, right і bottom відносно краю вікна браузера.</p>
-        <p>Приклад блоку, в якому використовуються значення  absolute і relative властивості position:</p>
+        <h1>РћР·РЅР°Р№РѕРјР»РµРЅРЅСЏ Р· css-РїСЂР°РІРёР»РѕРј "position"</h1>
+        <p>Р¦Рµ РїСЂР°РІРёР»Рѕ РІСЃС‚Р°РЅРѕРІР»СЋС” СЃРїРѕСЃС–Р± РїРѕР·РёС†С–СЋРІР°РЅРЅСЏ РµР»РµРјРµРЅС‚Сѓ РІС–РґРЅРѕСЃРЅРѕ РІС–РєРЅР° Р±СЂР°СѓР·РµСЂР° С‡Рё С–РЅС€РёС… РѕР±'С”РєС‚С–РІ РЅР° РІРµР±-СЃС‚РѕСЂС–РЅС†С–.РџРѕР»РѕР¶РµРЅРЅСЏ СЌР»РµРјРµРЅС‚Сѓ Р·Р°РґР°С”С‚СЊСЃСЏ Р°С‚СЂРёР±СѓС‚Р°РјРё left, top, right С– bottom РІС–РґРЅРѕСЃРЅРѕ РєСЂР°СЋ РІС–РєРЅР° Р±СЂР°СѓР·РµСЂР°.</p>
+        <p>РџСЂРёРєР»Р°Рґ Р±Р»РѕРєСѓ, РІ СЏРєРѕРјСѓ РІРёРєРѕСЂРёСЃС‚РѕРІСѓСЋС‚СЊСЃСЏ Р·РЅР°С‡РµРЅРЅСЏ  absolute С– relative РІР»Р°СЃС‚РёРІРѕСЃС‚С– position:</p>
         <div id ="puzzle">
             <img id ="img1" src ="img/v7/puzzle/1.png" alt ="puzzle">
             <img id ="img2" src ="img/v7/puzzle/2.png" alt ="puzzle">
@@ -34,16 +34,16 @@
             <img id ="img16" src ="img/v7/puzzle/16.png" alt ="puzzle">
             <img id ="img17" src ="img/v7/puzzle/17.png" alt ="puzzle">
             <img id ="img18" src ="img/v7/puzzle/18.png" alt ="puzzle">
-            <img id ="img19" src ="img/v7/puzzle/19.png" alt ="puzzle"> 
+            <img id ="img19" src ="img/v7/puzzle/19.png" alt ="puzzle">
             <img id ="img20" src ="img/v7/puzzle/20.png" alt ="puzzle">
         </div>
-        <h2>Значення властивості position</h2>
-        <p>Ця властивість може мати чотири значення: static, relative, absolute, fixed.</p>
-        <p><b>absolute</b> - Вказує, що елемент абсолютно зпозиціонований, при цьому елементи відображаються на веб-сторінці ніби абсолютно спозиціонованого елемента і немає. Положення елемента задається значеннями  left, top, right и bottom, також на положення впливає значення властивості position батьківського елементу. Так, якщо у батьківського елементу значення position встановлено як static чи батька немає, то відлік координат ведеться від краю вікна браузера. Якщо у батька значення position задано як fixed, relative чи absolute, то відлік координат ведеться від краю батьківського элементу.</p>
-        <p><b>fixed</b> - За своєю поведінкою це значення близке до absolute, але на відміну від нього привязується до вказаної властивостями left, top, right и bottom точки на екрані і не міняє свого положення при прокрутці веб-сторінки.</p>
-        <p><b>relative</b> - Положення элемента встановлюється відносно його початкового положення. Додавання властивостей left, top, right и bottom міняє позицію елементу і зміщує його в ту чи іншу сторону від початкового положення.</p>
-        <p><b>static</b> - Елементи відображаються як звично. Використання властивостей left, top, right и bottom не призводить до ніяких змін.</p>
-        <p><b>inherit</b> - Наслідує значение батьківського елементу.</p>
+        <h2>Р—РЅР°С‡РµРЅРЅСЏ РІР»Р°СЃС‚РёРІРѕСЃС‚С– position</h2>
+        <p>Р¦СЏ РІР»Р°СЃС‚РёРІС–СЃС‚СЊ РјРѕР¶Рµ РјР°С‚Рё С‡РѕС‚РёСЂРё Р·РЅР°С‡РµРЅРЅСЏ: static, relative, absolute, fixed.</p>
+        <p><b>absolute</b> - Р’РєР°Р·СѓС”, С‰Рѕ РµР»РµРјРµРЅС‚ Р°Р±СЃРѕР»СЋС‚РЅРѕ Р·РїРѕР·РёС†С–РѕРЅРѕРІР°РЅРёР№, РїСЂРё С†СЊРѕРјСѓ РµР»РµРјРµРЅС‚Рё РІС–РґРѕР±СЂР°Р¶Р°СЋС‚СЊСЃСЏ РЅР° РІРµР±-СЃС‚РѕСЂС–РЅС†С– РЅС–Р±Рё Р°Р±СЃРѕР»СЋС‚РЅРѕ СЃРїРѕР·РёС†С–РѕРЅРѕРІР°РЅРѕРіРѕ РµР»РµРјРµРЅС‚Р° С– РЅРµРјР°С”. РџРѕР»РѕР¶РµРЅРЅСЏ РµР»РµРјРµРЅС‚Р° Р·Р°РґР°С”С‚СЊСЃСЏ Р·РЅР°С‡РµРЅРЅСЏРјРё  left, top, right Рё bottom, С‚Р°РєРѕР¶ РЅР° РїРѕР»РѕР¶РµРЅРЅСЏ РІРїР»РёРІР°С” Р·РЅР°С‡РµРЅРЅСЏ РІР»Р°СЃС‚РёРІРѕСЃС‚С– position Р±Р°С‚СЊРєС–РІСЃСЊРєРѕРіРѕ РµР»РµРјРµРЅС‚Сѓ. РўР°Рє, СЏРєС‰Рѕ Сѓ Р±Р°С‚СЊРєС–РІСЃСЊРєРѕРіРѕ РµР»РµРјРµРЅС‚Сѓ Р·РЅР°С‡РµРЅРЅСЏ position РІСЃС‚Р°РЅРѕРІР»РµРЅРѕ СЏРє static С‡Рё Р±Р°С‚СЊРєР° РЅРµРјР°С”, С‚Рѕ РІС–РґР»С–Рє РєРѕРѕСЂРґРёРЅР°С‚ РІРµРґРµС‚СЊСЃСЏ РІС–Рґ РєСЂР°СЋ РІС–РєРЅР° Р±СЂР°СѓР·РµСЂР°. РЇРєС‰Рѕ Сѓ Р±Р°С‚СЊРєР° Р·РЅР°С‡РµРЅРЅСЏ position Р·Р°РґР°РЅРѕ СЏРє fixed, relative С‡Рё absolute, С‚Рѕ РІС–РґР»С–Рє РєРѕРѕСЂРґРёРЅР°С‚ РІРµРґРµС‚СЊСЃСЏ РІС–Рґ РєСЂР°СЋ Р±Р°С‚СЊРєС–РІСЃСЊРєРѕРіРѕ СЌР»РµРјРµРЅС‚Сѓ.</p>
+        <p><b>fixed</b> - Р—Р° СЃРІРѕС”СЋ РїРѕРІРµРґС–РЅРєРѕСЋ С†Рµ Р·РЅР°С‡РµРЅРЅСЏ Р±Р»РёР·РєРµ РґРѕ absolute, Р°Р»Рµ РЅР° РІС–РґРјС–РЅСѓ РІС–Рґ РЅСЊРѕРіРѕ РїСЂРёРІСЏР·СѓС”С‚СЊСЃСЏ РґРѕ РІРєР°Р·Р°РЅРѕС— РІР»Р°СЃС‚РёРІРѕСЃС‚СЏРјРё left, top, right Рё bottom С‚РѕС‡РєРё РЅР° РµРєСЂР°РЅС– С– РЅРµ РјС–РЅСЏС” СЃРІРѕРіРѕ РїРѕР»РѕР¶РµРЅРЅСЏ РїСЂРё РїСЂРѕРєСЂСѓС‚С†С– РІРµР±-СЃС‚РѕСЂС–РЅРєРё.</p>
+        <p><b>relative</b> - РџРѕР»РѕР¶РµРЅРЅСЏ СЌР»РµРјРµРЅС‚Р° РІСЃС‚Р°РЅРѕРІР»СЋС”С‚СЊСЃСЏ РІС–РґРЅРѕСЃРЅРѕ Р№РѕРіРѕ РїРѕС‡Р°С‚РєРѕРІРѕРіРѕ РїРѕР»РѕР¶РµРЅРЅСЏ. Р”РѕРґР°РІР°РЅРЅСЏ РІР»Р°СЃС‚РёРІРѕСЃС‚РµР№ left, top, right Рё bottom РјС–РЅСЏС” РїРѕР·РёС†С–СЋ РµР»РµРјРµРЅС‚Сѓ С– Р·РјС–С‰СѓС” Р№РѕРіРѕ РІ С‚Сѓ С‡Рё С–РЅС€Сѓ СЃС‚РѕСЂРѕРЅСѓ РІС–Рґ РїРѕС‡Р°С‚РєРѕРІРѕРіРѕ РїРѕР»РѕР¶РµРЅРЅСЏ.</p>
+        <p><b>static</b> - Р•Р»РµРјРµРЅС‚Рё РІС–РґРѕР±СЂР°Р¶Р°СЋС‚СЊСЃСЏ СЏРє Р·РІРёС‡РЅРѕ. Р’РёРєРѕСЂРёСЃС‚Р°РЅРЅСЏ РІР»Р°СЃС‚РёРІРѕСЃС‚РµР№ left, top, right Рё bottom РЅРµ РїСЂРёР·РІРѕРґРёС‚СЊ РґРѕ РЅС–СЏРєРёС… Р·РјС–РЅ.</p>
+        <p><b>inherit</b> - РќР°СЃР»С–РґСѓС” Р·РЅР°С‡РµРЅРёРµ Р±Р°С‚СЊРєС–РІСЃСЊРєРѕРіРѕ РµР»РµРјРµРЅС‚Сѓ.</p>
     </div>
 </body>
 </html>
