--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="uk">
       <head>
 	      <meta charset="UTF-8">
@@ -10,7 +10,7 @@
       <body>
         <div id="content">
         <div class = "fixed">
-            "Homework<br/> Денис Головко"
+            Homework<br/> Денис Головко
         </div>
         <h1>Ознайомлення з css-правилом "position"</h1>
         <p>Це правило встановлює спосіб позиціювання елементу відносно вікна браузера чи інших об'єктів на веб-сторінці.Положення элементу задається атрибутами left, top, right і bottom відносно краю вікна браузера.</p>
